2008-06-24  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=19597

        Test that we correctly parse comments containing end tags in CDATA and
        RCDATA contexts.

        * fast/parser/comment-in-script-tricky-expected.txt: Added.
        * fast/parser/comment-in-script-tricky.html: Added.
        * fast/parser/comment-in-style.html: Added.
        * fast/parser/comment-in-textarea.html: Added.
        * fast/parser/comment-in-title-expected.txt: Added.
        * fast/parser/comment-in-title.html: Added.
        * platform/mac/fast/parser/comment-in-style-expected.checksum: Added.
        * platform/mac/fast/parser/comment-in-style-expected.png: Added.
        * platform/mac/fast/parser/comment-in-style-expected.txt: Added.
        * platform/mac/fast/parser/comment-in-textarea-expected.checksum: Added.
        * platform/mac/fast/parser/comment-in-textarea-expected.png: Added.
        * platform/mac/fast/parser/comment-in-textarea-expected.txt: Added.

2008-06-24  Dan Bernstein  <mitz@apple.com>

        Reviewed by Mark Rowe.

        - add another test using remote fonts to the Tiger skipped list

        * platform/mac-tiger/Skipped: Added fast/css/font-weight-1.html.

2008-06-24  Mark Rowe  <mrowe@apple.com>

        Exclude the newly-added accessibilityController from the dumped window properties.

        * fast/dom/Window/window-properties.html:

2008-06-24  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by John.

        <rdar://problem/6026335> REGRESSION: Caret disappears after deleting a particular selection involving a ToDo

        * editing/deleting/6026335-expected.txt: Added.
        * editing/deleting/6026335.html: Added.

2008-06-24  Sam Weinig and Beth Dakin  <bdakin@apple.com and sam@webkit.org>

        Reviewed by Darin.
        
        First test for <rdar://problem/5884881> Make DumpRenderTree support 
        accessibility tests
